# hardhat

./: pnpm-lock.yaml
.github/workflows/: edr-benchmark.yml  edr-npm-release.yml
config/v-next/: eslint.cjs  tsconfig.json
crates/edr/src/: config.rs
crates/edr_config/: Cargo.toml
crates/edr_config/src/: account.rs  blockchain.rs  lib.rs
crates/edr_defaults/: Cargo.toml
crates/edr_defaults/src/: lib.rs
crates/edr_eth/: Cargo.toml
crates/edr_eth/src/: block.rs  serde.rs  signature.rs  utils.rs
crates/edr_eth/src/remote/: block_spec.rs  eth.rs
crates/edr_eth/src/transaction/: signed.rs
crates/edr_evm/: Cargo.toml
crates/edr_evm/benches/state/: state_debug.rs
crates/edr_evm/src/: debug_trace.rs  evm.rs  inspector.rs  lib.rs  miner.rs  runtime.rs  state.rs  trace.rs  tracing_inspector.rs
crates/edr_evm/src/block/: builder.rs
crates/edr_evm/src/state/: overrides.rs
crates/edr_evm/src/tracing_inspector/: call_traces.rs  config.rs  types.rs  utils.rs
crates/edr_evm/src/transaction/: pending.rs
crates/edr_napi/: CHANGELOG.md  Cargo.toml  index.d.ts  package.json
crates/edr_napi/src/: block.rs  config.rs  logger.rs
crates/edr_napi/src/tracer/: js_tracer.rs
crates/edr_napi/src/transaction/: result.rs
crates/edr_provider/: Cargo.toml
crates/edr_provider/src/: data.rs  lib.rs  logger.rs  test_utils.rs
crates/edr_provider/src/data/: inspector.rs
crates/edr_provider/src/requests/: methods.rs
crates/edr_provider/tests/: eth_request_serialization.rs  hardhat_request_serialization.rs
crates/edr_rpc_server/: Cargo.toml
crates/edr_rpc_server/src/: config.rs  hardhat_methods.rs  lib.rs  node.rs  server.rs
crates/edr_rpc_server/src/node/: node_data.rs
crates/edr_rpc_server/tests/: node.rs  node_data.rs
crates/edr_solidity/: Cargo.toml
crates/edr_solidity/src/: abi.rs  contracts_identifier.rs  lib.rs  model.rs  solc.rs  traces.rs
crates/edr_solidity/src/abi/: console_log.rs
crates/edr_solidity/src/abi/console_log/: hardhat.rs
crates/edr_solidity/src/model/: bytecode.rs  codebase.rs  contract.rs  custom_error.rs  function.rs  opcode.rs  source_file.rs  source_location.rs  source_map.rs
crates/edr_solidity/src/solc/: ast.rs  contract_inheritance.rs  model_builder.rs  public_functions_map.rs  standard_json.rs  utils.rs
crates/edr_solidity/test/: console-log-uint-solc-input.json
crates/edr_test_utils/: Cargo.toml
crates/edr_test_utils/src/: fixture.rs  lib.rs
crates/edr_test_utils/src/fixture/: node.rs
crates/rethnet/src/: lib.rs
crates/rethnet/tests/: cli.rs
crates/rethnet_eth/: Cargo.toml
crates/rethnet_eth/src/: block.rs  lib.rs  log.rs  receipt.rs  signature.rs  state.rs  transaction.rs  utils.rs
crates/rethnet_eth/tests/: integration_tests.rs  receipt.rs  transaction.rs
crates/rethnet_evm/: Cargo.toml
crates/rethnet_evm/src/: block.rs  blockchain.rs  lib.rs  mempool.rs  miner.rs  runtime.rs  state.rs  trace.rs
crates/rethnet_evm/tests/: blockchain.rs
crates/rethnet_evm_napi/: .gitignore  Cargo.toml  index.d.ts  package.json
crates/rethnet_evm_napi/src/: account.rs  block.rs  blockchain.rs  lib.rs  log.rs  mempool.rs  miner.rs  receipt.rs  runtime.rs  state.rs  trace.rs  tracer.rs
crates/rethnet_rpc/: Cargo.toml
crates/rethnet_rpc/src/: handler.rs  lib.rs  server.rs
crates/rethnet_rpc_server/src/: config.rs  filter.rs  hardhat_methods.rs  lib.rs  node.rs
crates/rethnet_rpc_server/tests/: integration_tests.rs
(+48 files in other folders)
