[package]
name = "edr_defaults"
version = "0.1.0-dev"
edition = "2021"

[dependencies]
edr_config = { version = "0.1.0-dev", path = "../edr_config" }
edr_eth = { version = "0.1.0-dev", default-features = false, path = "../edr_eth" }
revm-primitives = { git = "https://github.com/Wodann/revm", rev = "93d8ebe", version = "1.1", default-features = false }
