[package]
name = "edr_solidity"
version = "0.2.0-dev"
edition = "2021"

[dependencies]
alloy-json-abi = "0.5.2"
edr_eth = { version = "0.2.0-dev", path = "../edr_eth" }
edr_provider = { version = "0.2.0-dev", path = "../edr_provider", features = [""] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
revm = { git = "https://github.com/Wodann/revm", rev = "93d8ebe", version = "3.3", default-features = false, features = ["dev", "serde", "std"] }
serde = { version = "1.0.147", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.89" }
thiserror = { version = "1.0.38", default-features = false }
versions = "6.0.0"
