[package]
name = "edr_solidity"
version = "0.2.0-dev"
edition = "2021"

[dependencies]
alloy-json-abi = "0.5.2"
edr_eth = { version = "0.2.0-dev", path = "../edr_eth" }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
revm = { git = "https://github.com/Wodann/revm", rev = "d6fea43", version = "3.5", default-features = false, features = ["dev", "serde", "std"] }
parking_lot = { version = "0.12.1", default-features = false }
serde = { version = "1.0.147", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.89" }
thiserror = { version = "1.0.38", default-features = false }
versions = "6.0.0"

[dev-dependencies]
anyhow = "1.0.75"
edr_defaults = { version = "0.2.0-dev", path = "../edr_defaults" }
edr_provider = { version = "0.2.0-dev", path = "../edr_provider", features = ["test_utils"] }
tokio = { version = "1.21.2", default-features = false, features = ["macros"] }
