[package]
name = "edr_solidity"
version = "0.2.0-dev"
edition = "2021"

[dependencies]
alloy-sol-types = { version = "0.6.4", default-features = false, features = ["json", "std"]}
edr_eth = { version = "0.2.0-dev", path = "../edr_eth" }
edr_evm = { version = "0.2.0-dev", path = "../edr_evm" }
once_cell = { version = "1.19.0", default-features = false, features = ["alloc", "race", "std"] }
