[package]
name = "rethnet_rpc"
version = "0.1.0-dev"
edition = "2021"

[dependencies]
alloy-primitives = { version = "0.2.0", default-features = false, features = ["serde", "std"] }
rethnet_eth = { version = "0.1.0-dev", path = "../rethnet_eth", features = ["serde"] }
serde = { version = "1.0.147", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.89" }
